--- a/src/components/SignIn/SignIn.css
+++ b/src/components/SignIn/SignIn.css
@@ -1,29 +1,28 @@
-
-
-.signincontainer{
+.signincontainer {
     margin: 100px !important;
     display: flex;
 }
 
-.left, .right{
+.left,
+.right {
     width: 50%;
 }
 
-.header{
+.header {
     margin-bottom: 56px !important;
 }
 
-.left{
+.left {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.right{
+.right {
     border-left: 1px solid lightblue;
     padding: 36px;
 }
 
-img{
+img {
     width: 70%;
 }
